--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "express": "^4.17.1",
+    "helmet": "^4.6.0",
     "http-errors": "~1.6.3",
     "mongodb": "^4.0.0",
     "morgan": "~1.9.1",
-    "pug": "^3.0.2"
+    "nconf": "^0.11.3",
+    "pug": "^3.0.2",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "browser-sync": "^2.27.4",
