--- a/app/server/config/config.json
+++ b/app/server/config/config.json
@@ -1,7 +1,7 @@
 {
-  "port"                   : 3000,
+  "port"                   : 3001,
   "mongoose"               : {
-    "uri"                  : "mongodb://localhost/ik_chat",
+    "uri"                  : "mongodb://localhost/my-cha-cha",
     "options"              : {
       "keepAlive"          : true,
       "useNewUrlParser"    : true,
