--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "homepage": "https://github.com/waldteufelUkrNet/my_chat#readme",
   "dependencies": {
+    "connect-mongo": "^4.4.1",
     "cookie-parser": "~1.4.4",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "helmet": "^4.6.0",
     "http-errors": "~1.6.3",
     "mongodb": "^4.0.0",
