--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "app/server/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app/app.js"
+    "start": "npm run dev",
+    "gulp": "gulp default",
+    "nodemon": "nodemon app/app.js",
+    "dev": "npm-run-all -p gulp nodemon"
   },
   "repository": {
     "type": "git",
@@ -45,6 +48,7 @@
     "gulp-sass": "^5.0.0",
     "gulp-uglify-es": "^2.0.0",
     "nodemon": "^2.0.12",
+    "npm-run-all": "^4.1.5",
     "sass": "^1.35.2",
     "supervisor": "^0.12.0"
   }
