--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "browser-sync": "^2.27.4",
     "debug": "^2.6.9",
     "del": "^6.0.0",
+    "eslint": "^7.32.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-concat": "^2.6.1",
@@ -49,6 +50,7 @@
     "gulp-uglify-es": "^2.0.0",
     "nodemon": "^2.0.12",
     "npm-run-all": "^4.1.5",
+    "pug-lint": "^2.6.0",
     "sass": "^1.35.2",
     "supervisor": "^0.12.0"
   }
