--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongodb": "^4.0.0",
     "mongoose": "^5.13.7",
     "morgan": "~1.9.1",
+    "multer": "^1.4.3",
     "nconf": "^0.11.3",
     "pug": "^3.0.2",
     "winston": "^3.3.3"
