виправлення помилок рендерингу, обробка помилок

--- a/app/config/config.json
+++ b/app/config/config.json
@@ -5,7 +5,8 @@
     "options"              : {
       "keepAlive"          : true,
       "useNewUrlParser"    : true,
-      "useUnifiedTopology" : true
+      "useUnifiedTopology" : true,
+      "useCreateIndex"     : true
     }
   },
   "session"                : {
