--- a/package.json
+++ b/package.json
@@ -42,9 +42,9 @@
     "del": "^6.0.0",
     "eslint": "^7.32.0",
     "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^8.0.0",
+    "gulp-autoprefixer": "^6.1.0",
     "gulp-concat": "^2.6.1",
-    "gulp-imagemin": "^7.1.0",
+    "gulp-imagemin": "^8.0.0",
     "gulp-notify": "^4.0.0",
     "gulp-pug": "^5.0.0",
     "gulp-rename": "^2.0.0",
@@ -53,7 +53,6 @@
     "nodemon": "^2.0.12",
     "npm-run-all": "^4.1.5",
     "pug-lint": "^2.6.0",
-    "sass": "^1.35.2",
-    "supervisor": "^0.12.0"
+    "sass": "^1.35.2"
   }
 }
