--- a/app/config/config.json
+++ b/app/config/config.json
@@ -6,7 +6,8 @@
       "keepAlive"          : true,
       "useNewUrlParser"    : true,
       "useUnifiedTopology" : true,
-      "useCreateIndex"     : true
+      "useCreateIndex"     : true,
+      "useFindAndModify"   : false
     }
   },
   "session"                : {
