--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "multer": "^1.4.3",
     "nconf": "^0.11.3",
     "pug": "^3.0.2",
+    "socket.io": "^2.4.0",
     "winston": "^3.3.3"
   },
   "devDependencies": {
