--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "gulp": "gulp default",
     "nodemon": "nodemon app/app.js",
     "dev": "npm-run-all -p gulp nodemon",
-    "build": "gulp build"
+    "build": "gulp build",
+    "startprod": "nodemon dist/app.js"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,7 @@
     "cookie-parser": "~1.4.4",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "gulp-csso": "^4.0.1",
     "helmet": "^4.6.0",
     "http-errors": "~1.6.3",
     "mongodb": "^4.1.2",
