--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "my_chat",
-  "version": "0.0.1",
+  "version": "1.0.1",
   "description": "web-chat (MENG + Socket.io)",
   "main": "app/server/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run dev",
     "gulp": "gulp default",
     "nodemon": "nodemon app/app.js",
     "dev": "npm-run-all -p gulp nodemon",
     "build": "gulp build",
-    "startprod": "nodemon dist/app.js"
+    "start": "node dist/app.js"
   },
   "repository": {
     "type": "git",
